@@ -1,8 +1,9 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.BinaryContentDto;
-import com.sprint.mission.discodeit.dto.UserDto;
-import com.sprint.mission.discodeit.dto.UserUpdateDto;
+import com.sprint.mission.discodeit.dto.data.UserDto;
+import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
+import com.sprint.mission.discodeit.dto.request.UserCreateRequest;
+import com.sprint.mission.discodeit.dto.request.UserUpdateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.entity.UserStatus;
@@ -14,117 +15,124 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.UUID;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class BasicUserService implements UserService {
     private final UserRepository userRepository;
-    private final UserStatusRepository userStatusRepository;
     private final BinaryContentRepository binaryContentRepository;
+    private final UserStatusRepository userStatusRepository;
 
     @Override
-    public User create(UserDto userDto, Optional<BinaryContentDto> binaryContentDto) {
-        String userName = userDto.userName();
-        String userPassword = userDto.userPassword();
-        String userEmail = userDto.userEmail();
+    public User create(UserCreateRequest userCreateRequest, Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
+        String username = userCreateRequest.username();
+        String email = userCreateRequest.email();
 
-        if (userRepository.existsByUserName(userDto.userName())) {
-            throw new IllegalArgumentException("이미 사용중인 이름입니다.");
+        if (userRepository.existsByEmail(email)) {
+            throw new IllegalArgumentException("User with email " + email + " already exists");
         }
-        if (userRepository.existsByUserEmail(userDto.userEmail())) {
-            throw new IllegalArgumentException("이미 사용중인 이메일입니다.");
+        if (userRepository.existsByUsername(username)) {
+            throw new IllegalArgumentException("User with username " + username + " already exists");
         }
 
-        UUID profileId = binaryContentDto
-                .map(this::createBinaryContent)
+        UUID nullableProfileId = optionalProfileCreateRequest
+                .map(profileRequest -> {
+                    String fileName = profileRequest.fileName();
+                    String contentType = profileRequest.contentType();
+                    byte[] bytes = profileRequest.bytes();
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long)bytes.length, contentType, bytes);
+                    return binaryContentRepository.save(binaryContent).getId();
+                })
                 .orElse(null);
+        String password = userCreateRequest.password();
 
-        User user = new User(userName, userPassword, userEmail, profileId);
-        userRepository.save(user);
+        User user = new User(username, email, password, nullableProfileId);
+        User createdUser = userRepository.save(user);
 
-        UserStatus userStatus = new UserStatus(user.getId(), Instant.now(), true);
+        Instant now = Instant.now();
+        UserStatus userStatus = new UserStatus(createdUser.getId(), now);
         userStatusRepository.save(userStatus);
 
-        return user;
+        return createdUser;
     }
 
     @Override
-    public UserDto findById(UUID userId) {
+    public UserDto find(UUID userId) {
         return userRepository.findById(userId)
-                .map(user -> {
-                    UserStatus userStatus = userStatusRepository.findByUserId(userId)
-                            .orElseThrow(() -> new NoSuchElementException("해당 사용자의 상태 정보를 찾을 수 없습니다."));
-
-                    boolean isOnline = userStatus.isCurrentlyOnline();
-
-                    return new UserDto(user.getId(), user.getUserName(), user.getUserEmail(), null, user.getProfileId(), isOnline);
-                })
-                .orElseThrow(() -> new NoSuchElementException("해당 사용자의 정보가 존재하지 않습니다."));
+                .map(this::toDto)
+                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
     }
 
     @Override
     public List<UserDto> findAll() {
-        return userRepository.findAll().stream()
-                .map(user -> {
-                    UserStatus userStatus = userStatusRepository.findByUserId(user.getId())
-                            .orElseThrow(() -> new NoSuchElementException("해당 사용자의 상태 정보를 찾을 수 없습니다."));
-
-                    boolean isOnline = userStatus.isCurrentlyOnline();
-
-                    return new UserDto(user.getId(), user.getUserName(), user.getUserEmail(), null, user.getProfileId(), isOnline);
-                })
-                .collect(Collectors.toList());
+        return userRepository.findAll()
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
     @Override
-    public User update(UUID userId, UserUpdateDto userUpdateDto, Optional<BinaryContentDto> userProfile) {
+    public User update(UUID userId, UserUpdateRequest userUpdateRequest, Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NoSuchElementException("해당 사용자를 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
 
-        String newUsername = userUpdateDto.newUsername();
-        String newEmail = userUpdateDto.newEmail();
-        String newPassword = userUpdateDto.newPassword();
-
-        if (userRepository.existsByUserEmail(newEmail) && !newEmail.equals(user.getUserEmail())) {
-            throw new IllegalArgumentException("이미 사용중인 이메일입니다.");
+        String newUsername = userUpdateRequest.newUsername();
+        String newEmail = userUpdateRequest.newEmail();
+        if (userRepository.existsByEmail(newEmail)) {
+            throw new IllegalArgumentException("User with email " + newEmail + " already exists");
         }
-        if (userRepository.existsByUserName(newUsername) && !newUsername.equals(user.getUserName())) {
-            throw new IllegalArgumentException("이미 사용중인 사용자 이름입니다.");
+        if (userRepository.existsByUsername(newUsername)) {
+            throw new IllegalArgumentException("User with username " + newUsername + " already exists");
         }
 
-        UUID newProfileId = userProfile
-                .map(this::createBinaryContent)
-                .orElse(user.getProfileId());
+        UUID nullableProfileId = optionalProfileCreateRequest
+                .map(profileRequest -> {
+                    Optional.ofNullable(user.getProfileId())
+                                    .ifPresent(binaryContentRepository::deleteById);
 
-        user.update(newUsername, newEmail, newPassword, newProfileId);
-        userRepository.save(user);
+                    String fileName = profileRequest.fileName();
+                    String contentType = profileRequest.contentType();
+                    byte[] bytes = profileRequest.bytes();
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long) bytes.length, contentType, bytes);
+                    return binaryContentRepository.save(binaryContent).getId();
+                })
+                .orElse(null);
 
-        return user;
+        String newPassword = userUpdateRequest.newPassword();
+        user.update(newUsername, newEmail, newPassword, nullableProfileId);
+
+        return userRepository.save(user);
     }
 
     @Override
     public void delete(UUID userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NoSuchElementException("해당 사용자를 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
 
-        if (user.getProfileId() != null) {
-            binaryContentRepository.deleteById(user.getProfileId());
-        }
-
+        Optional.ofNullable(user.getProfileId())
+                        .ifPresent(binaryContentRepository::deleteById);
         userStatusRepository.deleteByUserId(userId);
 
         userRepository.deleteById(userId);
     }
 
-    private UUID createBinaryContent(BinaryContentDto profileImage) {
-        String fileName = profileImage.fileName();
-        String contentType = profileImage.contentType();
-        byte[] fileData = profileImage.fileData();
-        Long fileSize = (long) fileData.length;
+    private UserDto toDto(User user) {
+        Boolean online = userStatusRepository.findByUserId(user.getId())
+                .map(UserStatus::isOnline)
+                .orElse(null);
 
-        BinaryContent binaryContent = new BinaryContent(fileName, fileData, fileSize, contentType);
-        return binaryContentRepository.save(binaryContent).getId();
+        return new UserDto(
+                user.getId(),
+                user.getCreatedAt(),
+                user.getUpdatedAt(),
+                user.getUsername(),
+                user.getEmail(),
+                user.getProfileId(),
+                online
+        );
     }
 }
